# pdf-rag-chatbot

./: README.md  app.py  create_vector_db.py  pyproject.toml  streamlit_app.py
faiss_index/: index.faiss  index.pkl
